# SmartCar-laneDetection

./: .gitignore  CMakeLists.txt  Config.py  README.md  main.py  set.py  setup.py
config/: config.json
include/: common.hpp  detection.hpp  uart.hpp
scripts/: ImgProcess.py  ImgProcess.pyx  ImgProcess2.py  ImgProcess2.pyx  ImgShow.py  ImgWindow.py  ImgWindow.pyx  Main.py  Main.pyx  ResultProcess.py  getConfig.py  setup.py  transform.py  transform.pyx
scripts/utility/: CircleFit.py  ForkChecker.py  HillChecker.py  ParaCurve.py  Polyfit2d.py  RoundaboutChecker.py  RoundaboutChecker.pyx  RoundaboutEntering.py  ZoomedImg.py  __init__.py
src/: controlcenter.cpp  icar.cpp  mapping.cpp  motion.cpp
src/recognition/: ring.cpp  tracking.cpp
tool/: img2video.cpp
